gcc/testsuite/gm2/iso/const/fail/testval.mod
MODULE testval ;

CONST
   foo = VAL (INTEGER, c) ;

VAR
   c: CARDINAL ;
BEGIN

END testval.
